--- a/tsos.css
+++ b/tsos.css
@@ -1,6 +1,35 @@
 /* TSOS.css */
 
 body {
+    background-color: #D6D6D6 !important;
+}
+
+div.panel-heading {
+    background-color: #333 !important;
+    border-color: rgba(148, 148, 148, 0.23) !important;
+    color: white !important;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+nav.navbar-default {
+    background-color: #DC5B5B;
+    border-bottom: 6px solid #404040 !important;
+}
+
+.navbar-brand {
+    color: white !important
+}
+
+pre {
+    padding: 0 !important;
+    font-size: 0.9em !important;
+    line-height: 1.42857143 !important;
+    background-color: white !important;
+    border: none;
+}
+
+body {
     font-family: Helvetica, Verdana, Arial, sans-serif;
     font-size: 12pt;
     font-weight: normal;
@@ -14,13 +43,47 @@ body {
     padding: 0 !important;
 }
 
+#divMem {
+    height: 384px;
+    overflow-y: auto;
+}
+
 #consolePanel {
     width: 502px;
+}
+
+#ad-right {
+    position: absolute;
+    top: 60px;
+    right: 0px;
+    width: 35%;
+    text-align: right;
+}
+
+#ad-botright {
+    position: absolute;
+    top: 620px;
+    right: 0px;
+    width: 35%;
+    text-align: right;
+}
+
+#ad-right img, #ad-botright img {
+    width: 65%;
+    padding-right: 2%;
 }
 
 textArea {
     width: 100%;
     height: 100%;
+    border: none;
+    resize: none;
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
+#divUserProgramInput .panel-body {
+    padding: 0;
 }
 
 h1 {
